# tinyjuice

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  prompt-harness.md  prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: compression.rs
docs/: architecture.md  benchmarking.md  reduce-json-protocol.md
docs/agent-hooks/: README.md
docs/benchmark/: README.md
docs/references/: README.md  ast-stub-read-spec.md  batched-edit-validation-spec.md  headroom-algorithms-strategies-spec.md  headroom-improvement-ingestion-spec.md  (+10 more)
examples/: compression_benchmark.rs  passthrough.rs
interface/: README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
plan/: README.md  adapter-and-product-surfaces-plan.md  content-compressor-roadmap.md  conversation-compression-plan.md  current-state-and-critique.md  deferred-and-rejected-work.md  openhuman-algorithm-port-plan.md  openhuman-integration-plan.md  pipeline-and-ccr-plan.md  reference-algorithm-summary.md  rule-cli-and-safety-parity-plan.md
src/: cache_hints.rs  classify.rs  compress.rs  error.rs  lib.rs  live_zone.rs  main.rs  ml.rs  observability.rs  protocol.rs  reduce.rs  reduce_tests.rs  savings.rs  sdk.rs  text_tests.rs  tokens.rs  tool_integration.rs  types.rs  util.rs
tests/: cli.rs  compressor_fixtures.rs  diff_noise_policy_fixtures.rs  e2e_tool_output.rs  fixtures.rs  log_template_fixtures.rs  ml_tag_protection_fixtures.rs  reduce_json_stats.rs  scaffold.rs  search_read_fixtures.rs  web_extract_fixtures.rs
(+727 files in other folders)
